<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <TextView
        android:id="@+id/tvstore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6750A3"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvNamaPelanggan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:textStyle="bold"
        android:text="@string/selamat_datang"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/tvTipePelanggan"
        android:text="@string/tipe_pelanggan"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:textSize="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/transaksi_hari_ini_label"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="16dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/tvKodeBarang"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kode_barang_label"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/tvNamaBarang"
        android:text="@string/nama_barang_label"
        android:layout_marginLeft="16dp"
        android:textSize="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvHarga"
        android:text="@string/harga_label"
        android:layout_marginLeft="16dp"
        android:textSize="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvTotalHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_harga_label"
        android:layout_marginLeft="16dp"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/tvDiskonHarga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diskon_harga_label"
        android:layout_marginLeft="16dp"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/tvDiskonMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diskon_member_label"
        android:layout_marginLeft="16dp"
        android:textSize="16dp"/>

    <TextView
        android:id="@+id/tvJumlahBayar"
        android:layout_marginLeft="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jumlah_bayar_label"
        android:textSize="16dp"/>

    <TextView
        android:text="@string/terimakasih_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btnShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_button_label"
        android:layout_gravity="center_horizontal"
        android:textSize="16dp"
        android:layout_marginTop="30dp"/>

</LinearLayout>
