<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp">

    <TextView
        android:id="@+id/tvStore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6750A3"
        android:padding="16dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/etNamaPelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama_hint"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvTipePelanggan"
        android:text="@string/tipe_pelanggan"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbreguler"
            android:text="@string/reguler"
            android:layout_marginLeft="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbsilver"
            android:text="@string/silver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbgold"
            android:text="@string/gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <EditText
        android:id="@+id/etKodeBarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/kode_barang_hint"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/etJumlahBarang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jumlah_barang_hint"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnProses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/proses"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"/>

</LinearLayout>
